fix: Ingestion inputs value ( MAPCO-4191, MAPCO-5683 ) (#550)
* fix: when path and file name are too long use ellipsis

* fix: not allowing multipule selection in raster filePicker

* fix: pr

* fix: bug fix message error not parsing well

* fix: correct direction of directory and file names for english

* fix: merge

* fix: remove space

--- a/src/discrete-layer/components/layer-details/ingestion-fields.css
+++ b/src/discrete-layer/components/layer-details/ingestion-fields.css
@@ -83,6 +83,7 @@ body[dir='rtl'] .fileNamesSpacer {
 .fileItemName {
   text-overflow: ellipsis;
   overflow: hidden;
+  direction: rtl;
 }
 
 .fileIcon {
@@ -111,4 +112,5 @@ body[dir='rtl'] .moreTooltip {
   width: 60ch;
   overflow: hidden;
   text-overflow: ellipsis;
+  direction: rtl;
 }
